--- a/src/components/Header/components/SearchList/SearchList.module.scss
+++ b/src/components/Header/components/SearchList/SearchList.module.scss
@@ -1,10 +1,10 @@
 .search_list_container {
   position: absolute;
+  top: 64px
 }
 
 .search_list {
   width: 600px;
-  margin-top: 54px;
   margin-left: 60px;
   border-radius: var(--content-radius);
   text-align: start;
