--- a/src/components/Header/components/ListItem/ListItem.module.scss
+++ b/src/components/Header/components/ListItem/ListItem.module.scss
@@ -21,11 +21,11 @@
 
 .title {
   font-size: var(--type-body-size);
-  font-weight: var(--type-bodyBold-weight);
+  font-weight: var(--type-bodyMedium-weight);
 }
 
 .info {
   font-size: var(--type-bodySmall-size);
-  font-weight: var(--type-bodyBold-weight);
+  font-weight: var(--type-bodyMedium-weight);
   color: var(--color-grey)
 }
