--- a/src/components/FilmItem/FilmItem.module.scss
+++ b/src/components/FilmItem/FilmItem.module.scss
@@ -31,8 +31,8 @@
 
 .rating {
   color: #ffffffb3;
-  font-weight: var(--type-bodyBold-weight);
-  font-size:  var(--type-body-size);
+  font-weight: var(--type-bodyMedium-weight);
+  font-size:  var(--type-bodySmall-size);
   line-height: 1.5rem;
 }
 
@@ -41,6 +41,6 @@
   display: block;
   padding: 0 0.5rem;
   text-align: start;
-  font-size: var(--type-body-size);
-  font-weight: var(--type-bodyNormal-weight);
+  font-size: var(--type-bodySmall-size);
+  font-weight: var(--type-bodyRegular-weight);
 }
