--- a/src/components/Header/components/SearchInput/SearchInput.module.scss
+++ b/src/components/Header/components/SearchInput/SearchInput.module.scss
@@ -5,7 +5,7 @@
   width: 600px;
   background: var(--color-white);
   border-radius: 0 var(--content-radius) var(--content-radius) 0;
-  font-weight: var(--type-bodyBold-weight);
+  font-weight: var(--type-bodyMedium-weight);
   color: var(--color-dark-grey);
   font-size: var(--type-bodySmall-size);
   padding-left: 10px;
