Add new weights

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,8 +7,12 @@
   --content-radius: 5px;
 
   //font
-  --type-bodyNormal-weight: 400;
-  --type-bodyBold-weight: 500;
+  --type-bodyRegular-weight: 400;
+  --type-bodyMedium-weight: 500;
+  --type-bodySemiBold-weight: 600;
+  --type-bodyBold-weight: 700;
+  --type-bodyExtraBold-weight: 800;
+  --type-bodyBlack-weight: 900;
   --type-bodySmall-size: 0.875rem;
   --type-body-size: 1rem;
 
