--- a/src/components/Recommendations/Recommendations.module.scss
+++ b/src/components/Recommendations/Recommendations.module.scss
@@ -4,11 +4,16 @@
   flex-direction: column;
 }
 
+.alice-carousel__stage-item {
+  background-color: teal;
+}
+
 .top {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   h1 {
     color: white;
   }
@@ -16,6 +21,7 @@
 
 .button {
   padding: 8px 20px;
+  font-weight: bolder;
 }
 
 .thumb {
