--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: Nunito;
 }
 
 body {
@@ -24,3 +24,8 @@ img {
   max-width: 100%;
   object-fit: cover;
 }
+/*
+
+!*Костыль*!
+.alice-carousel {width: 1269px !important;}
+*/
