Change style for list item

--- a/src/components/FilmItem/FilmItem.module.scss
+++ b/src/components/FilmItem/FilmItem.module.scss
@@ -3,7 +3,7 @@
   background-color: var(--color-light-dark);
   border-radius: 0 0 var(--content-radius) var(--content-radius);
   padding-bottom: 1rem;
-  margin: 10px;
+  margin-right: 10px;
   list-style: none;
 }
 
