Remove trash and add font 'sans-serif'

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 * {
-  font-family: Nunito;
+  font-family: Nunito, 'sans-serif';
 }
 
 body {
@@ -24,8 +24,3 @@ img {
   max-width: 100%;
   object-fit: cover;
 }
-/*
-
-!*Костыль*!
-.alice-carousel {width: 1269px !important;}
-*/
