--- a/src/components/Recommendations/Recommendations.module.scss
+++ b/src/components/Recommendations/Recommendations.module.scss
@@ -2,10 +2,12 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-}
 
-.alice-carousel__stage-item {
-  background-color: teal;
+  &:hover {
+    .thumb_left, .thumb_right {
+      opacity: 1;
+    }
+  }
 }
 
 .top {
@@ -44,13 +46,17 @@
 }
 
 .thumb_right {
+  opacity: 0;
+  transition: all .25s ease-out;
   right: 0;
 }
 
 .thumb_left {
+  opacity: 0;
+  transition: all .25s ease-out;
   left: 0;
 }
 
 .disabled {
-  display: none;
+  opacity: 0;
 }
