Little refactor with variables

--- a/src/components/UI/UIButton/UIButton.module.scss
+++ b/src/components/UI/UIButton/UIButton.module.scss
@@ -1,6 +1,6 @@
 .button {
   outline: none;
-  border-radius: 5px;
+  border-radius: var(--content-radius);
   font-size: var(--type-body-size);
   font-weight: var(--type-bodyBold-weight);
   color: var(--color-black);
