Add one more color variable

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,6 +20,7 @@
   --color-white: #fff;
   --color-black: #000;
   --color-yellow: #f5c518;
+  --color-blue: #5799ef;
   --color-dark: #141414;
   --color-light-dark: #1a1a1a;
   --color-grey: #9b9b9b;
