--- a/src/components/FilmsTitle/FilmsTitle.module.scss
+++ b/src/components/FilmsTitle/FilmsTitle.module.scss
@@ -16,6 +16,8 @@
   border: none;
   padding-left: 0.75rem;
   position: relative;
+  color: var(--color-white);
+  text-align: start;
 
   &:before {
     background: var(--color-yellow);
@@ -27,4 +29,15 @@
     height: 100%;
     width: 4px;
   }
+}
+
+.title_info {
+  margin-top: 0;
+  color: rgba(255, 255, 255, .7);
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  letter-spacing: .03125em;
+  border: none;
+  display: block;
 }
