Change variable name

--- a/src/components/Header/components/DropDown/DropDown.module.scss
+++ b/src/components/Header/components/DropDown/DropDown.module.scss
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: space-between;
   text-align: start;
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   color: var(--color-dark-grey);
   padding-left: 10px;
 
@@ -35,7 +35,7 @@
   padding: 0;
   background: #1f1f1f;
   color: var(--color-white);
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   font-weight: var(--type-bodyMedium-weight);
 }
 
