--- a/src/components/FilmItem/FilmItem.module.scss
+++ b/src/components/FilmItem/FilmItem.module.scss
@@ -2,7 +2,7 @@
   color: var(--color-white);
   background-color: var(--color-light-dark);
   border-radius: 0 0 var(--content-radius) var(--content-radius);
-  padding-bottom: var(--type-body-size);
+  padding-bottom: var(--type-bodyRegular-size);
   margin-right: 10px;
   list-style: none;
 }
@@ -16,7 +16,7 @@
 
 .icon {
   color: var(--color-yellow);
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   margin-right: 0.4em;
 }
 
@@ -31,7 +31,7 @@
 .rating {
   color: #ffffffb3;
   font-weight: var(--type-bodyMedium-weight);
-  font-size:  var(--type-bodySmall-size);
+  font-size: var(--type-bodySmall-size);
 }
 
 .bottom {
@@ -42,11 +42,37 @@
   min-height: 44px;
   display: block;
   text-align: start;
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   font-weight: var(--type-bodyRegular-weight);
+  -webkit-line-clamp: 2;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 
-  -webkit-line-clamp: 2; /* Число отображаемых строк */
-  display: -webkit-box; /* Включаем флексбоксы */
-  -webkit-box-orient: vertical; /* Вертикальная ориентация */
-  overflow: hidden; /* Обрезаем всё за пределами блока */
+.film_info {
+  display: flex;
+  align-items: center;
+}
+
+.watchlist_btn {
+  color: var(--color-blue);
+  background: rgba(255, 255, 255, .08);
+
+  &:hover {
+    background: rgba(255, 255, 255, 0.22);
+  }
+}
+
+.trailer_btn {
+  color: var(--color-white);
+  background: none;
+
+  &:hover {
+    background: rgba(255, 255, 255, .08);
+  }
+
+  svg {
+    color: var(--color-dark-grey);
+  }
 }
