Change variable name

--- a/src/components/Header/components/ListItem/ListItem.module.scss
+++ b/src/components/Header/components/ListItem/ListItem.module.scss
@@ -20,7 +20,7 @@
 }
 
 .title {
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   font-weight: var(--type-bodyMedium-weight);
 }
 
