Change variable name

--- a/src/components/Header/components/SearchList/SearchList.module.scss
+++ b/src/components/Header/components/SearchList/SearchList.module.scss
@@ -11,7 +11,7 @@
   padding: 0;
   background: #1f1f1f;
   color: var(--color-white);
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   font-weight: var(--type-bodyMedium-weight);
 }
 
@@ -19,7 +19,7 @@
   padding: 40px;
   text-align: center;
   color: var(--color-grey);
-  font-size: var(--type-body-size);
+  font-size: var(--type-bodyRegular-size);
   font-weight: var(--type-bodyRegular-weight);
 }
 
