--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,15 +6,21 @@
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
   --content-radius: 5px;
 
-  //font
+  //font-line-height
+  --type-bodySmall-lineHeight: 1.25rem;
+
+  //font-weight
   --type-bodyRegular-weight: 400;
   --type-bodyMedium-weight: 500;
   --type-bodySemiBold-weight: 600;
   --type-bodyBold-weight: 700;
   --type-bodyExtraBold-weight: 800;
   --type-bodyBlack-weight: 900;
+
+  //font-size
   --type-bodySmall-size: 0.875rem;
-  --type-body-size: 1rem;
+  --type-bodyRegular-size: 1rem;
+  --type-bodyMedium-size: 1.5rem;
 
   // colors
   --color-white: #fff;
