--- a/src/components/Header/components/SearchList/SearchList.module.scss
+++ b/src/components/Header/components/SearchList/SearchList.module.scss
@@ -9,6 +9,7 @@
   border-radius: var(--content-radius);
   text-align: start;
   padding: 0;
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
   background: #1f1f1f;
   color: var(--color-white);
   font-size: var(--type-bodyRegular-size);
