--- a/src/components/screens/Film/Film.module.scss
+++ b/src/components/screens/Film/Film.module.scss
@@ -1,7 +1,6 @@
 body {
   background-color: #1f1f1f;
 }
-// !!
 
 .container {
   padding-bottom: 100px;
@@ -9,14 +8,6 @@ body {
 
 .content {
   display: flex;
-  margin-bottom: 50px;
-}
-
-.top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 30px;
 }
 
 .left {
@@ -78,20 +69,9 @@ body {
   }
 }
 
-.age {
-  display: inline-block;
-  padding: 1px 3px 0;
-  border-radius: 3px;
-  font-size: 11px;
-  line-height: 16px;
-  font-weight: 600;
-  border: 1px solid #ccc;
-  color: rgba(#000, 0.4);
-}
-
 .desc {
   margin: 0;
   font-size: 15px;
   line-height: 23px;
-  color: rgba(#000, 0.5);
+  color: rgba(#fff, 0.5);
 }
