--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,8 @@
 
 body {
   background-color: var(--color-black);
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -23,4 +25,9 @@ img {
   height: auto;
   max-width: 100%;
   object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
