Change light dark color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -34,7 +34,7 @@
   --color-orange: #f66600;
   --color-blue: #5799ef;
   --color-dark: #141414;
-  --color-light-dark: #1a1a1a;
+  --color-light-dark: #242424;
   --color-grey: #9b9b9b;
   --color-light-grey: #ffffffb3;
   --color-dark-grey: #606060;
