Added adaptive for header

--- a/src/components/layout-components/header/components/search-group/SearchGroup.module.scss
+++ b/src/components/layout-components/header/components/search-group/SearchGroup.module.scss
@@ -36,4 +36,10 @@
 
 .search_group {
   display: flex;
+  position: relative;
+  width: 50%;
+
+  @media (max-width: 576px) {
+    width: 70%;
+  }
 }
