--- a/src/components/layout-components/header/components/search-input/SearchInput.module.scss
+++ b/src/components/layout-components/header/components/search-input/SearchInput.module.scss
@@ -2,7 +2,7 @@
   min-height: 38px;
   outline: none;
   border: none;
-  width: 600px;
+  width: 100%;
   background: var(--color-white);
   border-radius: 0 var(--content-radius) var(--content-radius) 0;
   font-weight: var(--type-bodyMedium-weight);
@@ -22,7 +22,7 @@ input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
   background-color: white;
   top: 50%;
-  margin-left: 560px;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
