--- a/src/views/components/home/film-item/FilmItem.module.scss
+++ b/src/views/components/home/film-item/FilmItem.module.scss
@@ -10,6 +10,7 @@
 .image {
   display: block;
   height: 300px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -52,11 +53,19 @@
 .film_info {
   display: flex;
   align-items: center;
+
+  @media (max-width: 430px) {
+    display: none;
+  }
 }
 
 .watchlist_btn {
   color: var(--color-blue);
   background: rgba(255, 255, 255, .08);
+
+  @media (max-width: 430px) {
+    display: none !important;
+  }
 
   &:hover {
     background: rgba(255, 255, 255, 0.22);
