Change font size with variable

--- a/src/components/shared-components/button/Button.module.scss
+++ b/src/components/shared-components/button/Button.module.scss
@@ -7,7 +7,7 @@
   padding: 0 var(--type-bodyRegular-size);
   margin-top: var(--type-bodyRegular-size);
 
-  font-size: .875rem;
+  font-size: var(--type-bodySmall-size);
   font-weight: var(--type-bodyBold-weight);
   text-decoration: none;
   will-change: transform, opacity;
