--- a/src/components/layout-components/header/components/search-group/SearchGroup.module.scss
+++ b/src/components/layout-components/header/components/search-group/SearchGroup.module.scss
@@ -39,7 +39,8 @@
   position: relative;
   width: 50%;
 
-  @media (max-width: 576px) {
+  @media (max-width: 768px) {
     width: 70%;
+    position: initial;
   }
 }
