--- a/src/components/layout-components/header/components/dropdown/DropDown.module.scss
+++ b/src/components/layout-components/header/components/dropdown/DropDown.module.scss
@@ -21,12 +21,12 @@
   svg {
     margin-left: 0.2rem;
     margin-right: 0.2rem;
-    margin-top: 0.2rem;
   }
 }
 
 .dropdown_list_container {
   position: absolute;
+  padding-top: 20px;
 }
 
 .dropdown_list {
