--- a/src/components/layout-components/header/components/list-item/ListItem.module.scss
+++ b/src/components/layout-components/header/components/list-item/ListItem.module.scss
@@ -13,18 +13,29 @@
   position: relative;
   width: 48px;
   height: 71px;
-  padding: 0 10px 0 10px;
+  margin: 2px 10px;
 }
 
 .description {
   display: flex;
   flex-direction: column;
+  font-size: var(--type-bodySmall-size);
+  line-height: var(--type-bodySmall-lineHeight);
   padding: 5px;
 }
 
 .title {
   font-size: var(--type-bodyRegular-size);
+  line-height: var(--type-bodySmall-lineHeight);
   font-weight: var(--type-bodyMedium-weight);
+
+  @media (max-width: 1024px) {
+    font-size: var(--type-bodySmall-size);
+    -webkit-line-clamp: 1;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
 .info {
