--- a/src/components/shared-components/bookmark/Bookmark.module.scss
+++ b/src/components/shared-components/bookmark/Bookmark.module.scss
@@ -1,4 +1,4 @@
-.flag {
+.bookmark {
   cursor: pointer;
 
   &:hover {
@@ -13,7 +13,7 @@
   top: 0;
   left: 0;
   width: 15%;
-  z-index: 2;
+  z-index: 1;
 }
 
 .polygon {
@@ -21,7 +21,7 @@
   stroke: rgba(255, 255, 255, .08);
   -webkit-tap-highlight-color: transparent;
   opacity: 1;
-  transition: all .2s ease-in-out;
+  transition: all .25s ease-in-out;
 }
 
 .ribbon_icon {
@@ -31,5 +31,5 @@
   left: 1.5px;
   width: 35%;
   vertical-align: baseline;
-  z-index: 3;
+  z-index: 2;
 }
