--- a/src/components/shared-components/enum-info/EnumInfo.module.scss
+++ b/src/components/shared-components/enum-info/EnumInfo.module.scss
@@ -1,10 +1,5 @@
 .list {
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  flex-wrap: nowrap;
-  align-items: center;
-  margin: 0 0 0.4rem;
+  margin: 0 0 8px;
 
   li {
     display: inline;
@@ -13,11 +8,8 @@
         display: inline-block;
         margin: 0 0.5rem 0.2rem;
         content: "";
-        font-size: 1rem;
-        line-height: .5rem;
         padding: 1px;
         border-radius: 50%;
-        vertical-align: middle;
         background-color: currentColor;
       }
     }
