--- a/src/styles/tabs.scss
+++ b/src/styles/tabs.scss
@@ -11,21 +11,20 @@
     margin-bottom: 20px;
     border-bottom: 1px solid rgba(#000, 0.1);
 
-    @media (max-width: 768px) {
-      margin-left: -15px;
-      margin-right: -15px;
-      min-width: calc(100% + 15px);
-      padding: 0 15px;
+    @media (max-width: 576px) {
+      margin: 0;
+      padding: 15px 0;
+      min-width: 100%;
     }
   }
 
   &__tab {
+    outline: none;
     color: var(--color-white);
     position: relative;
     transform: translateY(1px);
     padding: 10px;
     transition: color 0.3s;
-    outline: none;
     cursor: pointer;
 
     &:after {
