--- a/src/views/components/home/films-group/FilmsGroup.module.scss
+++ b/src/views/components/home/films-group/FilmsGroup.module.scss
@@ -1,13 +1,23 @@
+.container {
+  &:hover {
+    .description {
+      transition: all .3s ease-out;
+      color: var(--color-yellow);
+      text-decoration: underline;
+    }
+  }
+}
+
 .wrapper {
-  max-width: 350px;
-  height: 220px;
+  cursor: pointer;
+  width: 30%;
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
 }
 
 .films {
-  height: 80%;
+  width: 100%;
   display: flex;
 }
 
