--- a/src/views/pages/film/Film.module.scss
+++ b/src/views/pages/film/Film.module.scss
@@ -1,13 +1,13 @@
-body {
-  background-color: #1f1f1f;
-}
-
 .container {
   padding-bottom: 100px;
 }
 
 .content {
   display: flex;
+
+  @media (max-width: 1024px) {
+    flex-direction: column;
+  }
 }
 
 .left {
@@ -19,6 +19,9 @@ body {
 
 .right {
   width: 100%;
+  @media (max-width: 1024px) {
+    padding: 15px 0;
+  }
 }
 
 .image {
@@ -27,7 +30,6 @@ body {
   height: auto;
   border-radius: 5px;
   overflow: hidden;
-  object-fit: cover;
   aspect-ratio: 2 / 3;
   background-color: var(--color-dark);
 }
